@@ -224,6 +224,7 @@ CommandInterpreter
 			help [cmd]   tab completes the first argument as a
 				     command
 			add component-name
+			load [filename [component-path]]
 
 		     This will require a uniform way of describing arguments,
 		     and whether or not they should be optional. The tab
